--- a/AffinityUI/AffinityUI.csproj
+++ b/AffinityUI/AffinityUI.csproj
@@ -62,6 +62,8 @@
     <Compile Include="HorizontalPanel.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Window.cs" />
+    <Compile Include="TooltipRenderer.cs" />
+    <Compile Include="UI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
