Sliders, minor refactoring

--- a/AffinityUI/AffinityUI.csproj
+++ b/AffinityUI/AffinityUI.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Control.cs" />
     <Compile Include="Tooltip.cs" />
     <Compile Include="ScrollView.cs" />
+    <Compile Include="HorizontalSlider.cs" />
+    <Compile Include="Space.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="VerticalSlider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
